SLog (0.9.2) unstable

	* Система плагинов:
		- LightLang
		- Google Translate
		- DICT
	* Нативная поддержка словарей формата LightLang
	* Вкладка управления плагинами в диалоге настроек
	* Двойной клик на списке слов - перевод в новой вкладке
	* Избавление от зависимости python-gtkhtml2
	* Горячие клавишы для активации движка <Alt>-1,2,3...9
	* Новые опции в настроке:
		- Сворачивать при старте
		- Spy autostart
	* Сортировка в диалоге управления словарями
	* Окно сервиса Spy теперь в пределах экрана
	* LL: Добавлен "Нечёткий поиск"

	-- Renat Nasyrov (renatn@gmail.com) 2008/04/16

SLog (0.9) unstable
	
	* Spy: 
		- Смена иконки в трее при переключении режима
	   	- Собственно окно
	* Online Google перевод
	* Запрет на запуск 2х версий программы
	* Добавлен диалог настроек программы
	* Возможность выбора клавиши модификатора

	-- Renat Nasyrov (renatn@gmail.com) 2008/01/26

SLog (0.8) unstable
	
	* Исправлено имя приложения в slog.desktop
	* Управление словарями:
		- модуль FTP полностью заменен на urllib;
		- эргономичное расположение кнопок;
		- выбор словарей для сервиса Spy;
	* Интернационализация интерфеса (i18n)
	* Аргументы командной строки
	* Внешнее управление:		
		- показать/скрыть главное окно;
		- вкл/выкл Spy;
	* Удалена зависимость "python-xlib"
	* Spy: добавлена клафиша модификатор

	-- Renat Nasyrov (renatn@gmail.com) 2007/12/26

SLog (0.7) unstable

	* Spy: многословный перевод: "Hello, World!" = ["Hello", "World"]
	* Исправлен url сайта проекта 
	* Управление словарями:
		- получение списка доступных на FTP словарей;
		- загрузка выбранного;
		- выполненине индексации;
		- установка;
		- изменение порядка установленных;
		- удаление;
		- переключние состояния;

	-- Renat Nasyrov (renatn@gmail.com) 2007/12/18

SLog (0.6) unstable

	* Проект переименован в "SLog"
	* Новая система сборки, применяется python distutils
	* Добавлены табы
	* Кнопка "Очистить" теперь только иконка
	* Добавлены tooltips 
	* Нотификация в момент сворачивания окна